# obs-plugins

ObsQtText/: CMakeLists.txt
ObsQtText/src/: main.cpp  qttext.cpp  qttext.h
